no data on id misclicks, id fix, collapsed accordion, hooked everything

--- a/css/template.css
+++ b/css/template.css
@@ -118,6 +118,9 @@ html, body {
   margin: 0;
   padding: 0;
 }
+body{
+  visibility:hidden;
+}
 
 #leftPane{
 	height:100%;
@@ -142,10 +145,29 @@ html, body {
 }
 
 #leftAccordion{
-	height:88%;
+	height:90%;
 	width:100%;
 	background-color:transparent;
 	font:Verdana, Geneva, sans-serif;
+}
+
+
+#tabContainer{
+	height:95%;
+	width:100%;
+	background-color:transparent;
+	font:Verdana, Geneva, sans-serif;
+	
+}
+#tab3{
+	font-size:10px;
+	
+	
+}
+
+#disclaimerHeadings{
+
+	
 }
 
 #homeButton {
